feat(M3+M4): Jinterface IPC bridge + ctrl-tree txlog viewer
M3 — BEAM ↔ JVM IPC via Jinterface:
- nous.jinterface: OtpNode lifecycle; ctrl mailbox receive loop;
  dispatches :ctrl_write → ctrl-tree; auto-starts epmd on first
  OtpNode failure so start! is order-independent
- nous.beam-mount: BeamMount implements IMount; sends :ctrl_write_echo
  (with beat/wall_ns/source) back to NousPort registered name
- Use 127.0.0.1 node names throughout — Jinterface rejects @localhost
  in longnames mode
- Hermetic jinterface-1.16.0.jar in lib/maven/ (built from OTP 29.0.2
  source) for bundled-JVM builds; also resolves from ~/.m2

M4 — txlog display pipeline:
- nous.txlog-store: in-memory SQLite txlog; 120 BPM wall-clock beat-fn;
  installed into ctrl-tree post-commit hook; wired into jinterface/start!
- --enable-native-access=ALL-UNNAMED in :jvm-opts — suppresses
  sqlite-jdbc restricted-method warning

nous.user: require nous.jinterface + nous.txlog-store so both are
available at the REPL without a manual require.

Suite: 2030 tests, 10893 assertions, 0 failures.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>